<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dataset"
        android:icon="@drawable/dataset"
        android:title="@string/title_dataset" />
    <item
        android:id="@+id/navigation_fitur"
        android:icon="@drawable/fitur"
        android:title="@string/title_fitur" />
    <item
        android:id="@+id/navigation_simulasi"
        android:icon="@drawable/simulasi"
        android:title="@string/title_simulasi" />
    <item
        android:id="@+id/navigation_model"
        android:icon="@drawable/model"
        android:title="@string/title_model" />
    <item
        android:id="@+id/navigation_tentang"
        android:icon="@drawable/tentang"
        android:title="@string/title_tentang" />

</menu>